syntax = "proto3";

import "pkg/protocol/core/base/base.proto";

package pbtv;

option go_package = "bscp.io/pkg/protocol/core/template-variable;pbtv";

// TemplateVariable source resource reference: pkg/dal/table/template_variable.go
message TemplateVariable {
  uint32 id = 1;
  TemplateVariableSpec spec = 2;
  TemplateVariableAttachment attachment = 3;
  pbbase.Revision revision = 4;
}

// TemplateVariableSpec source resource reference: pkg/dal/table/template_variable.go
message TemplateVariableSpec {
  string name = 1;
  string type = 2;
  string default_val = 3;
  string memo = 4;
}

// TemplateVariableAttachment source resource reference: pkg/dal/table/template_variable.go
message TemplateVariableAttachment {
  uint32 biz_id = 1;
}
